service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8c4-service
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
