service1-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1-app
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
