service2-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2-app
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
  - port: 80
    targetPort: 80
