ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    name: app-ingress
spec:
  rules:
    - host: "nginx-app1.fr"
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: service-app1
              port: 
                number: 80
    - host: "nginx-app2.com"
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: service-app2
              port: 
                number: 80
